static/css/main.css
:root {
  --form-container-padding: 10px;
  --form-padding: 7px;
  --input-font-size: 1.5rem;
  --very-darkbackground: #202020;
  --dark-background: #2b2b2b;
  --light-background: #323232;
  --highlight: #3d3d3d;
  --light-highlight: #434343;
  --text: #e6e6e6;
  --accent: #7a00cc;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: sans-serif;
}

#content {
  display: grid;
  grid-template-columns: 250px 2px 1fr;
}

.channel-pane {
  background-color: var(--dark-background);
  color: var(--text);
  font-size: 1.5rem;
}

#pane-divider {
  background-color: var(--very-darkbackground);
  cursor: ew-resize;
}

#pane-divider:hover {
  background-color: var(--accent);
}

.chat-pane {
  background-color: var(--light-background);
  height: 100vh;
  position: relative;
  display: flex;
  flex-direction: column;
}

h1,
h4 {
  padding: 8px 0 0 8px;
  color: var(--text);
}

h1 {
  font-size: 2rem;
}

.list-container {
  overflow: auto;
  padding: 0 8px;
  flex-grow: 1;
  max-width: 100%;
}

.list {
  color: var(--text);
  width: 100%;
}

.item {
  border-radius: 7px;
  display: flex;
}

.item:hover {
  background-color: var(--light-highlight);
}

.item:hover .delete-image {
  opacity: 1;
}

.item-content {
  padding: 3px 6px;
  overflow: hidden;
  font-size: 1.5rem;
  max-width: 100%;
  overflow: hidden;
  white-space: nowrap;
  flex-grow: 1;
  word-wrap: break-word;
}

.channel-content {
  text-overflow: ellipsis;
}

.selected-item {
  background-color: var(--highlight);
}

.delete-image {
  opacity: 0;
  width: 1.2rem;
  height: 100%;
  margin-right: 0.3rem;
  margin-left: 0.3rem;
}

.form-container {
  width: 100%;
  padding: var(--form-container-padding);
}

form {
  width: 100%;
  padding: var(--form-padding);
  padding-left: calc(var(--form-padding) * 1.3);
  border-radius: 26px;
  background-color: var(--highlight);
  display: flex;
  gap: 5px;
}

#textbox {
  flex-grow: 1;
  background: transparent;
  color: var(--text);
  border: 0;
  font-size: var(--input-font-size);
  line-height: var(--input-font-size);
  height: var(--input-font-size);
}

input[type="image"] {
  width: var(--input-font-size);
  vertical-align: middle;
}

img {
  display: block;
}

button {
  border: none;
  background: transparent;
  cursor: pointer;
}

.channel-pane a {
  color: inherit;
  text-decoration: none;
}

.channel-pane a:hover {
  text-decoration: underline;
}

